	internationalen Format, z.B. +498912345); existiert ein Name, Ausgabe
	auf STDOUT: "Name; Adresse" (einzeilig; in Latin-1), Rückgabewert 0;
	existiert kein Name, Rückgabewert 1; bei Fehlern Rückgabewert 2 oder
	größer.)

2012-03-03:

	* callmonitor: Neue Variable UUID steht Aktionen zur Verfügung. Sie
	identifiziert den Anruf (Folge von *:request bis *:disconnect oder
	*:cancel), nicht ein einzelnes Ereignis: Wie ID, nur
	(im Rahmen der zufälligen UUID-Erzeugung) global eindeutig.

	* herold_at.sh: An Änderungen angepasst
	* telefonbuch_at.sh: DasSchnelle.at: An Änderungen angepasst

2012-03-04:

	callmonitor-1.20

	* config.sh: Aktion "config wlan guest [on|off]" schaltet Gast-WLAN

2012-03-05:

	* adaffix.sh: Neue Rückwärtssuche bei m.adaffix.com
	* anywho.sh: Rückwärtssuche bei AnyWho entfernt

2012-03-11:

	callmonitor-1.20.1

2012-11-10:

	* reverse: Kleines Kommandozeilenprogramm zur Fehler- bei der
	Rückwärtssuche. Basisversion.

2012-11-15:

	* dasoertliche: Nichterkennung von "fetten" Einträgen behoben (Dank an
	knesi)
	* 11880: Bewertung aus Ergebnis entfernt

	callmonitor-1.20.2

2013-01-12:

	* webui: Neue Mehrbenutzerverwaltung ab Fritz!OS 5.50 wird unterstützt;
	beseitigt verschiedene Fehler ("Müll" in den Standortangaben,
	fehlende Null bei der Rückwärtssuche, keine Berücksichtigung des
	AVM-Telefonbuchs)
	
	Falls mit mehreren Benutzerkonten gearbeitet wird, muss einmalig der
	Benutzername eingestellt werden, den der Callmonitor zum Zugriff auf
	die Weboberfläche verwenden soll (um z.B. das Telefonbuch abzurufen).

	Achtung: Noch wenig getestet!

	* config: Umstellung auf ctlmgr_ctl, wo möglich

	callmonitor-1.20.3 (beta)

2013-01-13:

	* web: Kosmetische Korrekturen
	* webui: Kleine Änderung in der Reihenfolge der Parameter

	callmonitor-1.20.4 (beta)

2013-01-27:

	Kleinere Fehler bereinigt

	callmonitor-1.20.5 (beta)

2013-02-01:

	* reverse: DasÖrtliche repariert, adaffix entfernt

2013-02-03:

	callmonitor-1.20.6 (beta)