@@ -29,3 +29,15 @@ support() {
 have() {
     [ -e "${CALLMONITOR_LIBDIR}/features/$1" ]
 }
+
+## nc with NC_110_COMPAT behaves differently with null input (hangs), but has
+## -z for port scanning
+if LC_ALL=C busybox nc -z 2>&1 | egrep -q "(illegal|invalid) option -- z"; then
+    nc_scan() {
+	busybox nc "$@" < /dev/null > /dev/null 2>&1
+    }
+else
+    nc_scan() {
+	busybox nc -z "$@" < /dev/null > /dev/null 2>&1
+    }
+fi
